--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -356,9 +356,10 @@ img {
 }
 
 header {
-  width:232px;
+  width:350px;
   float:left;
   position:fixed;
+  margin-left:-100px;
   -webkit-font-smoothing:subpixel-antialiased;
   padding-top:4.0em;
   text-align:center
@@ -477,7 +478,7 @@ footer {
   }
 
   header {
-    padding-right:320px;
+    padding-right:400px;
   }
 
   section {
